tests/ui/link-native-libs/manual-link-unsupported-kind.rs
//@ compile-flags:-l raw-dylib=foo

fn main() {
}

//~? ERROR unknown library kind `raw-dylib`
